Migration to Java 8+ and bug fixes made by different authors
This commit upgrades Infonode to Java 8 or better. It contains fixes in Javadocs, removal of deprecated API calls, and several fixes that can be found in other forked repositories.